Fixed spacing issues between 'no results found for x' and 'x similar results found' phrases; fixes spacing/border issues between degree result lists, search again, bottom of page

--- a/style-responsive.css
+++ b/style-responsive.css
@@ -628,11 +628,11 @@
   #degree-search-content .degree-search-suggestions,
   #degree-search-content .degree-search-results + .degree-search-suggestions {
     margin-top: 20px;
-    padding-top: 20px;
+    padding-top: 0;
   }
   #degree-search-content .degree-search-suggestions-phrase {
       font-size: 16px;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
   }
 
 
